--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,10 +112,13 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+@import "@daveyplate/better-auth-ui/css";
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
